--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         <div class="s-intro__content-left">
                             <h1 class="s-intro__content-title">
                             Les bonnes adresses <br>
-                            parisiennes étudiantes
+                            parisiennes
                             </h1>
                         </div>
                         <div class="s-intro__content-right">
