--- a/styles.html
+++ b/styles.html
@@ -6,7 +6,7 @@
     ================================================== -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Booth - Styles</title>
+    <title>Le Dernier Métro</title>
 
     <script>
         document.documentElement.classList.remove('no-js');
@@ -112,7 +112,7 @@
 
                         <div class="s-intro__content-buttons">
                             <a href="#0" class="btn btn--primary s-intro__content-btn">Get Started</a>
-                            <a href="https://player.vimeo.com/video/14592941?color=00a650&title=0&byline=0&portrait=0" class="s-intro__content-video-btn">
+                            <a href="https://www.instagram.com/reel/CbA9_OrAy4K?color=23386f&title=0&byline=0&portrait=0" class="s-intro__content-video-btn">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M7 6v12l10-6z"></path></svg>
                             </a>
                         </div>
@@ -455,7 +455,7 @@
                     <h3 class="u-add-bottom">Responsive video</h3>
 
                     <div class="video-container">
-                    <iframe src="https://player.vimeo.com/video/14592941?color=00a650&title=0&byline=0&portrait=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> 
+                    <iframe src="https://www.instagram.com/reel/CbA9_OrAy4K/?color=23386f&title=0&byline=0&portrait=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> 
                     </div>
 
                 </div>
