--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="s-header__block">
                     <div class="s-header__logo">
                         <a class="logo" href="index.html">
-                            <img src="images/logo_LDM2.svg" alt="Homepage">
+                            <img src="images/logo_LDM2.svg" sizes="32x32" alt="Homepage">
                         </a>
                     </div>
 
