--- a/index.html
+++ b/index.html
@@ -100,13 +100,12 @@
                         </div>
                         <div class="s-intro__content-right">
                             <p class="s-intro__content-desc body-text-2">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                            Mattis lacus interdum dictum dolor sit amet lectus ornare nunc non.
+                            Envie d'un brunch abordable dans le 11e Arr. ou d'un italien authentique dans le quartier latin ? Le Dernier Métro est là pour toi
                             </p> 
 
                             <div class="s-intro__content-buttons">
                                 <a href="#download" class="btn btn--primary s-intro__content-btn smoothscroll">Get Started</a>
-                                <a href="https://player.vimeo.com/video/14592941?color=23386f&title=0&byline=0&portrait=0" class="s-intro__content-video-btn">
+                                <a href="https://www.instagram.com/reel/CbA9_OrAy4K/?color=23386f&title=0&byline=0&portrait=0" class="s-intro__content-video-btn">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M7 6v12l10-6z"></path></svg>
                                 </a>
                             </div>
