--- a/index.html
+++ b/index.html
@@ -698,8 +698,8 @@
                     </p>
     
                     <div class="ss-copyright">
-                        <span>© Booth 2021</span> 
-                        <span>Designed by <a href="https://www.styleshout.com/">StyleShout</a></span>
+                        <span>© Le Dernier Métro 2023</span> 
+                        <span>Designed by <a href=>Lucas BABONNEAU</a></span>
                     </div>
                 </div>
     
