--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </nav>
 
                 <div class="s-header__cta">
-                    <a href="#download" class="btn btn--stroke s-header__cta-btn smoothscroll">Get The App</a>
+                    <a href="#download" class="btn btn--stroke s-header__cta-btn smoothscroll">L'application</a>
                 </div>
 
             </div> <!-- end s-header__inner -->
@@ -104,7 +104,7 @@
                             </p> 
 
                             <div class="s-intro__content-buttons">
-                                <a href="#download" class="btn btn--primary s-intro__content-btn smoothscroll">Get Started</a>
+                                <a href="#download" class="btn btn--primary s-intro__content-btn smoothscroll">Mapstr</a>
                                 <a href="https://vm.tiktok.com/ZMYqXjGAQ/?color=23386f&title=0&byline=0&portrait=0" class="s-intro__content-video-btn">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M7 6v12l10-6z"></path></svg>
                                 </a>
@@ -685,11 +685,11 @@
     
                 <div class="column lg-6 stack-on-900 end">
                     <ul class="s-footer__site-links">
-                        <li><a class="smoothscroll" href="#home" title="intro">Intro</a></li>
-                        <li><a class="smoothscroll" href="#about" title="about">About</a></li>
+                        <li><a class="smoothscroll" href="#home" title="intro">L'asso</a></li>
+                        <li><a class="smoothscroll" href="#about" title="about">Le guide</a></li>
                         <li><a class="smoothscroll" href="#testimonials" title="reviews">Reviews</a></li>
                         <li><a class="smoothscroll" href="#pricing" title="pricing">Pricing</a></li>
-                        <li><a class="smoothscroll" href="#download" title="download">Download</a></li>	
+                        <li><a class="smoothscroll" href="#download" title="download">Télécharger</a></li>	
                     </ul>
     
                     <p class="s-footer__contact">
