--- a/index.html
+++ b/index.html
@@ -253,16 +253,16 @@
 
                         <div class="s-about__screens">
                             <div class="s-about__screen">
-                                <img src="images/screens/screen-03.png"
-                                     srcset="images/screens/screen-03.png 1x, images/screens/screen-03@2x.png 2x" alt="">
+                                <img src="images/screens/guide3.jpg"
+                                     srcset="images/screens/guide3.jpg 1x, images/screens/guide3.jpg 2x" alt="">
                             </div>
                             <div class="s-about__screen">
-                                <img src="images/screens/screen-02.png"
-                                     srcset="images/screens/screen-02.png 1x, images/screens/screen-02@2x.png 2x" alt="">
+                                <img src="images/screens/guide2.jpg"
+                                     srcset="images/screens/guide2.jpg 1x, images/screens/guide2.jpg 2x" alt="">
                             </div>
                             <div class="s-about__screen">
-                                <img src="images/screens/screen-01.png"
-                                     srcset="images/screens/screen-01.png 1x, images/screens/screen-01@2x.png 2x" alt="">
+                                <img src="images/screens/guide1.jpg"
+                                     srcset="images/screens/guide1.jpg 1x, images/screens/guide1.jpg 2x" alt="">
                             </div>
                         </div>
 
