--- a/styles.html
+++ b/styles.html
@@ -64,7 +64,7 @@
                 <div class="s-header__block">
                     <div class="s-header__logo">
                         <a class="logo" href="index.html">
-                            <img src="images/logo.svg" alt="Homepage">
+                            <img src="images/logo_LDM2.svg" alt="Homepage">
                         </a>
                     </div>
 
@@ -784,7 +784,7 @@
                 <div class="column lg-5 md-6 stack-on-900">
                     <div class="footer__logo">
                         <a href="index.html">
-                            <img src="images/logo.svg" alt="Homepage">
+                            <img src="images/logo_LDM2.svg" alt="Homepage">
                         </a>
                     </div>
     
