--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
 
                 <nav class="s-header__nav">
                     <ul>
-                        <li class="current"><a href="#intro" class="smoothscroll">Guide 2023</a></li>
-                        <li><a href="#about" class="smoothscroll">About</a></li>
-                        <li><a href="#pricing" class="smoothscroll">Pricing</a></li>
-                        <li><a href="#download" class="smoothscroll">Download</a></li>
+                        <li class="current"><a href="#intro" class="smoothscroll">Accueil</a></li>
+                        <li><a href="#about" class="smoothscroll">Guide 2023</a></li>
+                        <li><a href="#pricing" class="smoothscroll">Mapstr</a></li>
+                        <li><a href="#download" class="smoothscroll">Application</a></li>
                     </ul>
                 </nav>
 
@@ -595,11 +595,9 @@
             <section id="download" class="s-download target-section">
                 <div class="row s-download__header">
                     <div class="column lg-12">
-                        <h2 class="text-display-1">Thousands of People Are Now Using Booth. Join Our Community!</h2>
+                        <h2 class="text-display-1">L'application arrive très bientôt. Restez à l'affût !</h2>
                         <p class="lead">
-                        Et nihil atque ex. Reiciendis et rerum ut voluptate. Omnis molestiae nemo est. 
-                        Ut quis enim rerum quia assumenda repudiandae non cumque qui. Amet repellat 
-                        omnis ea. Ultrices pellentesque amet tristique feugiat condimentum integer fames. 
+                        L'équipe de développement du Dernier Métro travaille d'arrache pied pour vous fournir au plus vite une application disponible sur le PlayStore et l'AppStore offrant l'intégralité du contenu du site accessible même hors-ligne.
                         </p>
                     </div>
                 </div>
@@ -683,11 +681,11 @@
     
                 <div class="column lg-6 stack-on-900 end">
                     <ul class="s-footer__site-links">
-                        <li><a class="smoothscroll" href="#home" title="intro">L'asso</a></li>
-                        <li><a class="smoothscroll" href="#about" title="about">Le guide</a></li>
+                        <li><a class="smoothscroll" href="#home" title="intro">Accueil</a></li>
+                        <li><a class="smoothscroll" href="#about" title="about">Guide 2023</a></li>
                         <li><a class="smoothscroll" href="#testimonials" title="reviews">Reviews</a></li>
-                        <li><a class="smoothscroll" href="#pricing" title="pricing">Pricing</a></li>
-                        <li><a class="smoothscroll" href="#download" title="download">Télécharger</a></li>	
+                        <li><a class="smoothscroll" href="#pricing" title="pricing">Mapstr</a></li>
+                        <li><a class="smoothscroll" href="#download" title="download">Application</a></li>	
                     </ul>
     
                     <p class="s-footer__contact">
