--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                                         <h4 class="h5">Varié.</h4>
                     
                                         <p>
-                                        Le mot d'ordre des Métropolitains, c'est évidement la variété dans les adresses référencées. Avec plus de 50 articles, des tops thématiques et des catégories spéciales petits budget ou romantisme, c'est certain que tu y trouveras ton compte et que tes papilles découbvriront des saveurs encore inédites !
+                                        Le mot d'ordre des Métropolitains, c'est évidement la diversité dans les adresses référencées. Avec plus de 50 articles, des tops thématiques et des catégories spéciales petits budget ou romantisme, c'est la certitude d'y trouver son compte !
                                         </p>
                                     </div>  <!-- end s-about__info-slide  -->
                     
