--- a/index.html
+++ b/index.html
@@ -154,20 +154,20 @@
                 <div class="row block-lg-one-fourth block-tab-one-half block-stack s-about__stats">
 
                     <div class="column s-about__stats-item">
-                        <div class="s-about__stats-count">554<span>k</span></div>
-                        <h5>Total Downloads</h5>
+                        <div class="s-about__stats-count">300</div>
+                        <h5>Exemplaires publiés (2022)</h5>
                     </div>
                     <div class="column s-about__stats-item">
-                        <div class="s-about__stats-count">22<span>k</span></div>
-                        <h5>Daily Visitors</h5>
+                        <div class="s-about__stats-count">4,4<span>k</span></div>
+                        <h5>Abonnés Facebook</h5>
                     </div>
                     <div class="column s-about__stats-item">
-                        <div class="s-about__stats-count">99<span>%</span></div>
-                        <h5>Positive Rating</h5>
+                        <div class="s-about__stats-count">2,8<span>k</span></div>
+                        <h5>Abonnés Instagram</h5>
                     </div>
                     <div class="column s-about__stats-item">
-                        <div class="s-about__stats-count">526<span>k</span></div>
-                        <h5>Happy Users</h5>
+                        <div class="s-about__stats-count">28</div>
+                        <h5>Membres actifs</h5>
                     </div>
 
                 </div> <!-- end stats -->
@@ -516,6 +516,12 @@
 
             <!-- pricing
             ----------------------------------------------- -->
+            <section class="map">
+                <h2>Find Us</h2>
+                <p>Use the map below to locate us:</p>
+                     <iframe src="https://mapstr.com/map/lederniermetro/9pZtsosbNf" width="100%" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
+            </section>
+
             <section id="pricing" class="s-pricing target-section">
                 <div class="row s-pricing__content">
 
