--- a/index.html
+++ b/index.html
@@ -517,9 +517,12 @@
             <!-- pricing
             ----------------------------------------------- -->
             <section class="map">
-                <h2>Find Us</h2>
-                <p>Use the map below to locate us:</p>
-                     <iframe src="https://mapstr.com/map/lederniermetro/9pZtsosbNf" width="100%" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <div class="row narrow text-center s-testimonials__header">
+                    <div class="column lg-12">
+                        <h3 class="h2">Le Mapstr de nos adresses</h3>
+                        <iframe src="https://mapstr.com/map/lederniermetro/9pZtsosbNf" width="100%" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    </div>
+                </div>       
             </section>
 
             <section id="pricing" class="s-pricing target-section">
