--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     ================================================== -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Booth</title>
+    <title>Le Dernier Métro</title>
 
     <script>
         document.documentElement.classList.remove('no-js');
@@ -154,8 +154,8 @@
                 <div class="row block-lg-one-fourth block-tab-one-half block-stack s-about__stats">
 
                     <div class="column s-about__stats-item">
-                        <div class="s-about__stats-count">300</div>
-                        <h5>Exemplaires publiés (2022)</h5>
+                        <div class="s-about__stats-count">200</div>
+                        <h5>Exemplaires publiés</h5>
                     </div>
                     <div class="column s-about__stats-item">
                         <div class="s-about__stats-count">4,4<span>k</span></div>
@@ -516,7 +516,7 @@
 
             <!-- pricing
             ----------------------------------------------- -->
-            <section class="map">
+            <section id="pricing" class="s-pricing target-section">
                 
                 <div class="row narrow text-center s-testimonials__header">
 
@@ -530,9 +530,6 @@
 
                 </div> 
 
-            </section>
-
-            <section id="pricing" class="s-pricing target-section">
                 <div class="row s-pricing__content">
 
                     <div class="column lg-4 md-12 s-pricing__header">
