--- a/styles.html
+++ b/styles.html
@@ -832,8 +832,8 @@
                     </p>
     
                     <div class="ss-copyright">
-                        <span>© Booth 2021</span> 
-                        <span>Designed by <a href="https://www.styleshout.com/">StyleShout</a></span>
+                        <span>© Le Dernier Métro 2023</span> 
+                        <span>Designé par <a href="https://www.linkedin.com/in/lucas-babonneau-7602721b5//">Lucas BABONNEAU</a></span>
                     </div>
                 </div>
     
