--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
     
                     <div class="ss-copyright">
                         <span>© Le Dernier Métro 2023</span> 
-                        <span>Designed by <a href=>Lucas BABONNEAU</a></span>
+                        <span>Designé par <a href="https://www.linkedin.com/in/lucas-babonneau-7602721b5//">Lucas BABONNEAU</a></span>
                     </div>
                 </div>
     
