--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
 
                             <div class="s-intro__content-buttons">
                                 <a href="#download" class="btn btn--primary s-intro__content-btn smoothscroll">Mapstr</a>
-                                <iframe width="560" height="315" src="https://mapstr.com/map/lederniermetro/9pZtsosbNf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+                                <a src="https://www.youtube.com/embed/Hx4Eor0KS4E" color="23386f&title=0&byline=0&portrait=0" class="s-intro__content-video-btn">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M7 6v12l10-6z"></path></svg>
-                                </iframe>
+                                </a>
                             </div>
                         </div>
                     </div> <!-- s-intro__content-inner -->
