--- a/index.html
+++ b/index.html
@@ -521,7 +521,85 @@
                 <div class="row narrow text-center s-testimonials__header">
 
 
+                      <head>
+                        <style>
+                            html, body, #map {
+                                width: 100%;
+                                height: 100%;
+                            }
+                        </style>
+                        <script src="https://maps.googleapis.com/maps/api/js"></script>
+                        <script>
+                            var map;
+                            var map_center = new google.maps.LatLng(55.774593, 37.679367);
+                            var path_coords = [
+                                {lat: 55.77248, lng: 37.67913},
+                                {lat: 55.77249, lng: 37.67866},
+                                {lat: 55.77558, lng: 37.67776},
+                                {lat: 55.77594, lng: 37.67701},
+                                {lat: 55.777, lng: 37.67977}
+                            ];
+                            var path_bounds = new google.maps.LatLngBounds();
 
+                            function initialize() {
+                                var mapCanvas = document.getElementById('map');
+                                var mapOptions = {
+                                    center: map_center,
+                                    zoom: 16,
+                                    mapTypeId: google.maps.MapTypeId.ROADMAP
+                                };
+                                map = new google.maps.Map(mapCanvas, mapOptions);
+                                addRoute(map);
+                            }
+
+                            function addMarker(label, location, map) {
+                                var marker = new google.maps.Marker({
+                                    position: location,
+                                    label: label,
+                                    map: map
+                                });
+                            }
+
+                            function addRoute(map) {
+                                var lineSymbol = {
+                                    path: google.maps.SymbolPath.FORWARD_CLOSED_ARROW
+                                };
+
+                                var flightPath = new google.maps.Polyline({
+                                    path: path_coords,
+                                    geodesic: true,
+                                    icons: [{
+                                        icon: lineSymbol,
+                                        offset: '100%'
+                                    }],
+                                    strokeColor: '#FF0000',
+                                    strokeOpacity: 1.0,
+                                    strokeWeight: 2
+                                });
+
+                                for(var i = 0; i < path_coords.length; i++) {
+                                    addMarker((i+1).toString(), path_coords[i], map);
+                                    path_bounds.extend(new google.maps.LatLng(path_coords[i].lat,
+                                                path_coords[i].lng));
+                                }
+                                
+                                flightPath.setMap(map);
+                                resize();
+                            }
+
+                            function resize() {
+                                map.setCenter(map_center);
+                                map.fitBounds(path_bounds);
+                            }
+
+                            google.maps.event.addDomListener(window, 'load', initialize);
+                            google.maps.event.addDomListener(window, 'resize', resize);
+                        </script>
+                        </head>
+
+                        <body>
+                            <div id="map"></div>
+                        </body>
 
                     <div class="column lg-12">
 
