--- a/index.html
+++ b/index.html
@@ -678,10 +678,9 @@
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.tiktok.com/@lederniermetropolitain"
-                                svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill:rgba(0, 0, 0, 1);transform:;-ms-filter:"><a href="tiktok_logo.svg" sizes="24x24">
+                            <img src="images/logo_LDM2.svg" sizes="24x24" href="https://www.tiktok.com/@lederniermetropolitain">
                                 <span class="u-screen-reader-text">Tiktok</span>
-                            </a>
+                            </img>
                         </li>
                         <li>
                             <a href="https://www.instagram.com/ledernier.metro/">
