logo tiktok fin de page

--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
                             </a>
                         </li>
                         <li>
-                            <img src="images/logo_LDM2.svg" sizes="24x24" href="https://www.tiktok.com/@lederniermetropolitain">
+                            <img src="images/icons/tiktok_logo.png" sizes="24x24" href="https://www.tiktok.com/@lederniermetropolitain">
                                 <span class="u-screen-reader-text">Tiktok</span>
                             </img>
                         </li>
