--- a/styles.html
+++ b/styles.html
@@ -803,9 +803,9 @@
                             </a>
                         </li>
                         <li>
-                            <a href="tiktok_logo.svg" sizes="32x32">
+                            <img src="images/icons/tiktok_logo.png" sizes="24x24" href="https://www.tiktok.com/@lederniermetropolitain">
                                 <span class="u-screen-reader-text">Tiktok</span>
-                            </a>
+                            </img>
                         </li>
                         <li>
                             <a href="">
