--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
                         </li>
                         <li>
                             <a href="https://www.tiktok.com/@lederniermetropolitain">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill:rgba(0, 0, 0, 1);transform:;-ms-filter:"><path d="M12 2.25c3.816 0 6.75 2.934 6.75 6.563v6.375c0 3.63-2.934 6.563-6.75 6.563h-6.75c-3.816 0-6.75-2.933-6.75-6.563v-6.375c0-3.629 2.934-6.563 6.75-6.563zm4.5 9.563c0 3.237-2.619 5.875-5.812 5.875-3.193 0-5.812-2.638-5.812-5.875s2.619-5.875 5.812-5.875c3.193 0 5.812 2.638 5.812 5.875zm-2.25 0c0-1.651-1.335-2.938-3-2.938-1.665 0-3 1.287-3 2.938 0 1.652 1.335 2.938 3 2.938 1.665 0 3-1.286 3-2.938zm1.5-3.938c-.412 0-.75-.338-.75-.75s.338-.75.75-.75.75.338.75.75-.338.75-.75.75z"></path></svg>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill:rgba(0, 0, 0, 1);transform:;-ms-filter:"><path d="M7 2v20l10-10z"></path></svg>
                                 <span class="u-screen-reader-text">Tiktok</span>
                              </a>
                         </li>
