--- a/styles.html
+++ b/styles.html
@@ -804,7 +804,7 @@
                         </li>
                         <li>
                             <a href="">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill:rgba(0, 0, 0, 1);transform:;-ms-filter:"><path d="M7 2v20l10-10z"></path></svg>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M11.556 3.888c-.88 0-1.603.674-1.603 1.509v8.166c0 .834.723 1.508 1.603 1.508s1.603-.674 1.603-1.508v-8.166c0-.835-.723-1.51-1.603-1.51zm6.301 2.443c-.308-.078-.657.011-.901.233-2.136 1.759-4.98 2.789-8.001 2.789-3.02 0-5.865-1.03-8.002-2.79-.245-.202-.592-.31-.901-.233-.31.078-.527.353-.527.677v12.893c0 .434.424.774.853.677 2.525-.622 5.2-.956 8.051-.956s5.526.334 8.051.957c.429.097.853-.243.853-.677v-12.893c0-.324-.217-.599-.527-.677z"/></svg>
                                 <span class="u-screen-reader-text">Tiktok</span>
                              </a>
                         </li>
