--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
                     <div class="row section-header" data-num="01">
                         <div class="column lg-6 stack-on-1000 title-block">
-                            <h2 class="title text-display-1">L'édition 2023 du guide.</h2>
+                            <h2 class="title text-display-1">La raison d'être du guide.</h2>
                         </div>
                         <div class="column lg-6 stack-on-1000 desc-block">
                             <p class="desc lead">
@@ -266,7 +266,7 @@
 
                     <div class="row section-header" data-num="02">
                         <div class="column lg-12 title-block">
-                            <h2 class="title text-display-1">How the App Works.</h2>
+                            <h2 class="title text-display-1">L'édition 2023.</h2>
                         </div>
                     </div>
 
@@ -276,33 +276,27 @@
 
                             <div class="s-about__howto-process">
                                 <div class="s-about__howto-process-step">
-                                    <h3 class="h5">Sign Up</h3>
+                                    <h3 class="h5">Des articles.</h3>
                                     <p>
                                     Quos dolores saepe mollitia deserunt accusamus autem reprehenderit. Voluptas facere animi explicabo non quis magni recusandae. 
                                     Numquam debitis non quis pariatur omnis facere unde. 
                                     </p>
                                 </div>
                                 <div class="s-about__howto-process-step">
-                                    <h3 class="h5">Create</h3>
+                                    <h3 class="h5">Des tops.</h3>
                                     <p>
                                     Commodi vero praesentium ex eum sunt. Deserunt animi velit. Eum explicabo omnis at aut perferendis veniam. Corporis expedita 
                                     voluptas culpa dicta qui tempora non explicabo omnis at sint tempora.
                                     </p>
                                 </div>
                                 <div class="s-about__howto-process-step">
-                                    <h3 class="h5">Compose</h3>
+                                    <h3 class="h5">Des cartes.</h3>
                                     <p>
                                     Est quam molestias eius. Voluptatibus eveniet debitis natus porro dignissimos quia. Molestias sint ab velit. Perspiciatis porro 
                                     hic possimus exercitationem sint ab velit architecto fugiat. 
                                     </p>
                                 </div>
-                                <div class="s-about__howto-process-step">
-                                    <h3 class="h5">Send</h3>
-                                    <p>
-                                    Qui aspernatur soluta sapiente voluptas ut a. Non repellat dolores dolorum vel et aut et perferendis. Hic voluptatem odit ab qui. 
-                                    Officia blanditiis molestiae voluptatem odit ab. 
-                                    </p>
-                                </div>
+                                
                             </div> <!-- end how-to process -->
 
                         </div>
@@ -310,10 +304,10 @@
                         <div class="column s-about__howto-screens-block">
 
                             <div class="s-about__howto-screens">
-                                <img src="images/screens/screen-01.png"
-                                     srcset="images/screens/screen-01.png 1x, images/screens/screen-01@2x.png 2x" alt="">
-                                <img src="images/screens/screen-04.png"
-                                     srcset="images/screens/screen-04.png 1x, images/screens/screen-04@2x.png 2x" alt="">
+                                <img src="images/screens/cover.jpg"
+                                     srcset="images/screens/cover.jpg 1x, images/screens/cover.jpg 2x" alt="">
+                                <img src="images/screens/cover.jpg"
+                                     srcset="images/screens/cover.jpg 1x, images/screens/cover.jpg 2x" alt="">
                             </div>
 
                         </div>
@@ -328,13 +322,11 @@
 
                     <div class="row section-header" data-num="03">
                         <div class="column lg-6 stack-on-1000 title-block">
-                            <h2 class="title text-display-1">The Best Features of The App.</h2>
+                            <h2 class="title text-display-1">Nos engagements.</h2>
                         </div>
                         <div class="column lg-6 stack-on-1000 desc-block">
                             <p class="desc lead">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Urna, sit pretium, 
-                            proin sed massa maecenas tempus, nibh. Ultrices pellentesque amet tristique 
-                            feugiat condimentum integer fames.
+                            Cette édition marque le tournant digital et éco-responsable de l'association avec une place de première importance accordée aux actions allant dans ce sens. Nous en notons 6 majeures. 
                             </p>
                         </div>
                     </div>
