--- a/index.html
+++ b/index.html
@@ -306,8 +306,8 @@
                             <div class="s-about__howto-screens">
                                 <img src="images/screens/cover.jpg"
                                      srcset="images/screens/cover.jpg 1x, images/screens/cover.jpg 2x" alt="">
-                                <img src="images/screens/cover.jpg"
-                                     srcset="images/screens/cover.jpg 1x, images/screens/cover.jpg 2x" alt="">
+                                <img src="images/screens/cover2.png"
+                                     srcset="images/screens/cover2.png 1x, images/screens/cover2.png 2x" alt="">
                             </div>
 
                         </div>
