--- a/index.html
+++ b/index.html
@@ -305,9 +305,9 @@
 
                             <div class="s-about__howto-screens">
                                 <img src="images/screens/cover2.png"
-                                     srcset="images/screens/cover2.png 1x, images/screens/cover.jpg 2x" alt="">
-                                <img src="images/screens/cover.png"
-                                     srcset="images/screens/cover.png 1x, images/screens/cover2.png 2x" alt="">
+                                     srcset="images/screens/cover.png 1x, images/screens/cover.jpg 2x" alt="">
+                                <img src="images/screens/cover2.png"
+                                     srcset="images/screens/cover.png 1x, images/screens/cover.png 2x" alt="">
                             </div>
 
                         </div>
