--- a/index.html
+++ b/index.html
@@ -296,24 +296,18 @@
                                     hic possimus exercitationem sint ab velit architecto fugiat. 
                                     </p>
                                 </div>
-                                
                             </div> <!-- end how-to process -->
 
                         </div>
-
                         <div class="column s-about__howto-screens-block">
-
                             <div class="s-about__howto-screens">
                                 <img src="images/screens/cover2.png"
-                                     srcset="images/screens/cover.png 1x, images/screens/cover.jpg 2x" alt="">
-                                <img src="images/screens/cover2.png"
+                                     srcset="images/screens/cover2.png 1x, images/screens/cover2.jpg 2x" alt="">
+                                <img src="images/screens/cover.png"
                                      srcset="images/screens/cover.png 1x, images/screens/cover.png 2x" alt="">
                             </div>
-
                         </div>
-
                     </div>
-        
                 </div> <!-- end how-to -->
 
 
@@ -508,27 +502,25 @@
                 <div class="text-center s-testimonials__header">
                     <div class="column lg-12">
                         <h3 class="h2">Le Mapstr de nos adresses</h3>
-                        <a href="https://mapstr.com/map/lederniermetro/9pZtsosbNf" style="display: inline-block; padding: 12px 20px; background-color: #007bff; color: #fff; font-size: 18px; border-radius: 8px; text-decoration: none;">Mapstr</a>
-
-                            <div class="s-about__screens">
-                                <div class="s-about__screen">
-                                    <img src="images/screens/mapstr1.png"
-                                         srcset="images/screens/mapstr1.png 1x, images/screens/mapstr1.png 2x" alt="">
-                                </div>
-                                <div class="s-about__screen">
-                                    <img src="images/screens/mapstr2.png"
-                                         srcset="images/screens/mapstr2.png 1x, images/screens/gmapstr2.png 2x" alt="">
-                                </div>
-                                <div class="s-about__screen">
-                                    <img src="images/screens/mapstr3.png"
-                                         srcset="images/screens/mapstr3.png 1x, images/screens/gmapstr3.png 2x" alt="">
-                                </div>
-                            </div>
+                        <a href="https://mapstr.com/map/lederniermetro/9pZtsosbNf" style="display: inline-block; padding: 12px 20px; background-color: #ffc122; color: #fff; font-size: 18px; border-radius: 8px; text-decoration: none;">Mapstr</a>
                     </div>
                 </div> 
             </div> <!-- end s-pricing__header -->   
                 <div class="row s-pricing__content">
                     <div class="column lg-4 md-12 s-pricing__header">
+                            <div class="s-about__screen">
+                                <img src="images/screens/mapstr1.png"
+                                    srcset="images/screens/mapstr1.png 1x, images/screens/mapstr1.png 2x" alt="">   
+                            </div>
+                            <div class="s-about__screen">
+                                <img src="images/screens/mapstr2.png"
+                                    srcset="images/screens/mapstr2.png 1x, images/screens/mapstr2.png 2x" alt="">
+                            </div>
+                            <div class="s-about__screen">
+                                <img src="images/screens/mapstr3.png"
+                                    srcset="images/screens/mapstr3.png 1x, images/screens/mapstr3.png 2x" alt="">
+                            </div>
+                    </div>
                 </div> <!-- end s-pricing__content -->
             </section> <!-- end pricing -->
 
