--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                             </p> 
 
                             <div class="s-intro__content-buttons">
-                                <a href="#download" class="btn btn--primary s-intro__content-btn smoothscroll">Mapstr</a>
+                                <a href="#download" class="btn btn--primary s-intro__content-btn smoothscroll">Application</a>
                                 <a src="https://www.youtube.com/embed/Hx4Eor0KS4E" color="23386f&title=0&byline=0&portrait=0" class="s-intro__content-video-btn">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M7 6v12l10-6z"></path></svg>
                                 </a>
@@ -505,9 +505,20 @@
                         <a href="https://mapstr.com/map/lederniermetro/9pZtsosbNf" style="display: inline-block; padding: 12px 20px; background-color: #ffc122; color: #fff; font-size: 18px; border-radius: 8px; text-decoration: none;">Mapstr</a>
                     </div>
                 </div> 
+                <div class="s-about__screen">
+                    <img src="images/screens/mapstr1.png"
+                        rcset="images/screens/mapstr1.png 1x, images/screens/mapstr1.png 2x" alt="">   
+                </div>
+                <div class="s-about__screen">
+                   <img src="images/screens/mapstr2.png"
+                        srcset="images/screens/mapstr2.png 1x, images/screens/mapstr2.png 2x" alt="">
+                </div>
+                <div class="s-about__screen">
+                    <img src="images/screens/mapstr3.png"
+                        srcset="images/screens/mapstr3.png 1x, images/screens/mapstr3.png 2x" alt="">
+                </div>
             </div> <!-- end s-pricing__header -->   
                 <div class="row s-pricing__content">
-                    <div class="column lg-4 md-12 s-pricing__header">
                             <div class="s-about__screen">
                                 <img src="images/screens/mapstr1.png"
                                     srcset="images/screens/mapstr1.png 1x, images/screens/mapstr1.png 2x" alt="">   
@@ -520,7 +531,6 @@
                                 <img src="images/screens/mapstr3.png"
                                     srcset="images/screens/mapstr3.png 1x, images/screens/mapstr3.png 2x" alt="">
                             </div>
-                    </div>
                 </div> <!-- end s-pricing__content -->
             </section> <!-- end pricing -->
 
