--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </nav>
 
                 <div class="s-header__cta">
-                    <a href="#download" class="btn btn--stroke s-header__cta-btn smoothscroll">Mapstr</a>
+                    <a href="https://mapstr.com/map/lederniermetro/9pZtsosbNf" style="display: inline-block; padding: 12px 20px; background-color: #ffc122; color: #fff; font-size: 18px; border-radius: 8px; text-decoration: none;">Mapstr</a>
                 </div>
 
             </div> <!-- end s-header__inner -->
