--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </nav>
 
                 <div class="s-header__cta">
-                    <a href="https://mapstr.com/map/lederniermetro/9pZtsosbNf" class="btn btn--stroke s-header__cta-btn smoothscroll">Mapstr</a>
+                    <a href="https://mapstr.com/map/lederniermetro/9pZtsosbNf" class="btn btn--stroke s-header__cta-btn">Mapstr</a>
                 </div>
 
             </div> <!-- end s-header__inner -->
