--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
                     <img src="images/screens/mapstr3.png"
                         srcset="images/screens/mapstr3.png 1x, images/screens/mapstr3.png 2x" alt="">
                 </div>
-            </div> <!-- end s-pricing__header -->   
+            <!-- end s-pricing__header -->   
                 <div class="row s-pricing__content">
                             <div class="s-about__screen">
                                 <img src="images/screens/mapstr1.png"
