--- a/index.html
+++ b/index.html
@@ -515,15 +515,15 @@
 
                             <div class="s-about__screens">
                                 <div class="s-about__screen">
-                                    <img src="images/screens/mapstr3.png"
-                                         srcset="images/screens/mapstr3.png 1x, images/screens/mapstr3.png 2x" alt="">
+                                    <img src="images/screens/mapstr3.png" width="900" height="1300"
+                                        srcset="images/screens/mapstr3.png 1x, images/screens/mapstr3.png 2x" alt="">
                                 </div>
                                 <div class="s-about__screen">
-                                    <img src="images/screens/mapstr2.png"
+                                    <img src="images/screens/mapstr2.png" width="900" height="1300"
                                          srcset="images/screens/mapstr2.png 1x, images/screens/mapstr2.png 2x" alt="">
                                 </div>
                                 <div class="s-about__screen">
-                                    <img src="images/screens/mapstr1.png"
+                                    <img src="images/screens/mapstr1.png" width="900" height="1300"
                                          srcset="images/screens/mapstr1.png 1x, images/screens/mapstr1.png 2x" alt="">
                                 </div>
                             </div>
