--- a/index.html
+++ b/index.html
@@ -512,18 +512,19 @@
                     <div class="row s-about__screens-block">
                         
                         <div class="column lg-12">
+                            <iframe width="200" height="300"></iframe>
 
                             <div class="s-about__screens">
                                 <div class="s-about__screen">
-                                    <img src="images/screens/mapstr3.png" width="900" height="1300"
+                                    <img src="images/screens/mapstr3.png" width="200" height="300"
                                         srcset="images/screens/mapstr3.png 1x, images/screens/mapstr3.png 2x" alt="">
                                 </div>
                                 <div class="s-about__screen">
-                                    <img src="images/screens/mapstr2.png" width="900" height="1300"
+                                    <img src="images/screens/mapstr2.png" width="200" height="300"
                                          srcset="images/screens/mapstr2.png 1x, images/screens/mapstr2.png 2x" alt="">
                                 </div>
                                 <div class="s-about__screen">
-                                    <img src="images/screens/mapstr1.png" width="900" height="1300"
+                                    <img src="images/screens/mapstr1.png" width="200" height="300"
                                          srcset="images/screens/mapstr1.png 1x, images/screens/mapstr1.png 2x" alt="">
                                 </div>
                             </div>
