--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
 
                 </div>
                 <div class="s-about__info">
-                    <div class="row s-about__screens-block">
+                    <div class="row s-about__screens-block" height="1000">
                         
                         <div class="column lg-12">
 
